# Fusion_cashflow_app

./: .gitignore  LICENSE  README.md  cashflow_engine.py  dashboard.py  fusion_theme.yaml  optimise_cashflow_by_region.py  optimization_requirements.txt  optimization_summary.csv  power_to_epc.py  pyproject.toml  pytest.ini  requirements.txt  run_dashboard_with_static.py  setup.py  test_cas30_debug.py  test_complete_mapping.py  test_comprehensive_suite.py  test_costing_panel.py  test_costing_simple.py  test_dashboard_materials.py  test_detailed_costs.py  test_embedded_costing.py  test_lcoe_audit.py  test_lcoe_fix.py  test_material_aliases.py  test_material_sensitivity.py  test_phase3_complete.py  test_phase3_magnets.py  test_power_balance_direct.py  test_power_balance_keys.py  test_power_method.py  test_pyfecons_adapter.py  test_q_sensitivity.py  test_simple.py  verify_fixes.py
docs/: COSTING_API_REFERENCE.md  COSTING_VERIFICATION_CHECKLIST.md  EMBEDDED_COSTING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  POWER_METHOD_SUMMARY.md  PYFECONS_PORT_PLAN.md  STRESS_TESTING_GUIDE.md  q_eng_logic.md
examples/: test_lcoe_fix.py  test_power_method.py  test_simple.py
fusion_cashflow_app/: __init__.py  app.py  cashflow_engine.py  dashboard.py  power_to_epc.py  stooq_avg_return_cache.pkl
fusion_cashflow_app/report/: __init__.py  test_report_builder.py  test_report_layout.py
report/: bokeh_theme.yaml  report_builder.py  test_report_layout.py
requirements/: test.txt
scripts/: analyze_stress_tests.py  assess_model.py  model_robustness_test.py  optimization_tools.py  quick_analysis.py  run_stress_tests.py
tests/: load_test.py  test_engine.py  test_plots.py
visuals/: bokeh_plots.py
(+63 files in other folders)
