[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-cashflow"
version = "1.0.0"
description = "Fusion Energy Financial Cashflow Modeling Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.0",
    "bokeh>=3.0.0",
    "holoviews>=1.15.0",
    "scipy>=1.9.0",
    "numpy_financial>=1.0.0",
    "pandas_datareader>=0.10.0",
    "jinja2>=3.0.0",
    "nevergrad>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "memory-profiler", 
    "psutil",
    "faker"
]
test = [
    "pytest",
    "pytest-benchmark", 
    "pytest-cov"
]

[project.scripts]
fusion-cashflow = "fusion_cashflow.ui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]